app/components/views/GetStartedPage/GetStarted.module.css
/* ... */
.releaseNotesImage.release-image-v150 {
  background-image: var(--release-image-v150);
}

.releaseNotesText {
  font-size: 13px;
  font-family: Helvetica, sans-serif;
  max-width: 410px;
}

.releaseNotesText a {
  color: var(--link-color);
}

.releaseNotesVersionNavigation {
  font-size: 13px;
}

.releaseNotesVersionNavigation > a {
  margin-right: 30px;
  cursor: pointer;
  color: var(--title-text-and-button-background);
  text-decoration: none;
}

.whatsnew {
  font-size: 13px;
  margin-left: 20px;
  text-decoration: underline;
  cursor: pointer;
  color: var(--info-modal-button-bg);
}

.whatsnew:hover {
  opacity: 0.7;
}

@keyframes bounce {
  0% {
    margin-left: 0px;
  }

  50% {
    margin-left: 2px;
  }

  100% {
    margin-left: 0px;
  }
}

.launchArrowBounce {
  color: var(--white-button-text);
  float: left;
  margin-top: 6px;
  animation: bounce 1s var(--ease-in-out-quart) infinite;
}

.customPrivacySettings {
  width: 300px;
}

.title {
  font-size: 27px;
  line-height: 34px;
  margin-bottom: 6px;
}

.titleSub {
  color: var(--header-desc-color);
  font-size: 13px;
  line-height: 17px;
  margin-bottom: 42px;
  width: 296px;
}

.titleSub a {
  color: var(--link-color);
}

.privacyOptions {
  display: flex;
  justify-content: center;
  margin-left: 35px;
  padding-right: 2em;
}

.privacyOption {
  width: 296px;
  min-width: 296px;
  height: 342px;
  border-radius: 5px;
  margin-right: 20px;
  padding: 1px;
  background-color: var(--background-back-color);
  color: var(--modal-text);
  cursor: pointer;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.privacyOption:hover {
  padding: 0;
  border: 1px solid var(--input-color);
}

.privacyOption:hover .privacyOptionTitle {
  color: var(--input-color);
}

.privacyTextContainer {
  margin: 0 30px;
  flex: 1;
}

.privacyOptionTitle {
  font-size: 15px;
  line-height: 19px;
  margin-bottom: 8px;
}

.privacyOptionDescription {
  font-size: 13px;
  line-height: 17px;
}

.privacyOptionIcon {
  margin: 30px 0 20px 0;
  background-repeat: no-repeat;
  background-size: 150px;
  width: 150px;
  height: 150px;
  background-position: center;
  align-self: center;
}

.privacyOptionIcon.standard {
  background-image: var(--stakey-privacy-standard);
}

.privacyOptionIcon.icon-disabled {
  background-image: var(--stakey-privacy-disabled);
}

.privacyOptionIcon.custom {
  background-image: var(--stakey-privacy-custom);
}

.privacyOptionIcon.enable-spv {
  background-image: var(--enable-spv);
}

.privacyOptionIcon.disable-spv {
  background-image: var(--disable-spv);
}

.stakepoolAddRow {
  float: left;
  width: 100%;
}

.stakepoolAddCol {
  padding-top: 1em;
}

.stakepoolAddCol.left {
  padding-right: 1em;
}

.stakepoolAddCol.right {
  float: left;
  width: 27%;
  margin-left: 100px;
  background-color: var(--disabled-background-color);
  padding: 2em;
}

.field {
  display: grid;
  min-height: 2em;
  grid-template-columns: 30% 87%;
  margin-bottom: 2em;
}

.label {
  text-align: right;
}

.stakepoolAddButtons {
  float: left;
}

.trezorConfigSections {
  margin-top: 14em;
}

.launchError {
  margin-bottom: 20px;
  color: var(--error-text-color);
}

@media screen and (max-width: 1919px) {
  .settings .goBackScreenButtonArea {
    left: 1230px;
  }
  .settings .saveButtonWrapper {
    width: 1247px;
  }
}

@media screen and (max-width: 1679px) {
  .settings .goBackScreenButtonArea {
    left: 988px;
  }
  .settings .saveButtonWrapper {
    width: 1002px;
  }
}

@media screen and (max-width: 1439px) {
  .settings .goBackScreenButtonArea {
    left: 726px;
  }
  .settings .saveButtonWrapper {
    width: 740px;
  }
}

@media screen and (max-width: 1180px) {
  .settings .goBackScreenButtonArea {
    left: 636px;
    top: 112px;
  }
  .settings .saveButtonWrapper {
    width: 650px;
  }
}

@media screen and (max-width: 978px) {
  .privacyOptions.wide {
    justify-content: flex-start;
    margin-left: 0;
  }

  .privacyOptions.wide .privacyOption {
    width: 209px;
    min-width: 209px;
  }

  .privacyOptions.wide .privacyOption .privacyOptionIcon {
    background-size: 114px;
    width: 114;
    height: 114px;
  }

  .privacyOptions.wide .privacyOption .privacyTextContainer {
    margin: 0 20px;
  }
}
/* ... */

